--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button class="menu-control external">
             <span></span>
         </button>
-        <div class="header-controls hide">
+        <div class="header-controls">
             <p class="header-controls-title">CoinJapan</p>
             <nav class="header-navigation">
                 <ul>
@@ -75,13 +75,13 @@
     <div class="cj-container">
         <div class="row">
             <div class="col-sm-12 col-md-6">
-                <h2 class="section-header">about us</h2>
-                <p>Pellentesque pulvinar pellentesque habitant morbi tristique. Id diam vel quam elementum pulvinar
-                    etiam. Tristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id
-                    donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla</p>
-                <div class="row">
-                    <div class="col-sm-12 col-md-6 offset-md-6">
-                        <a href="#" class="cj-btn"><span>more</span></a>
+                <div class="about-us-content">
+                    <h2 class="section-header">about us</h2>
+                    <p>Coinjapan is a reliable partner to attract Japanese investments via ICO. The world's largest cryptocurrency market with proactive investors, who willingly invest in innovative projects and the future tech, is open only to those who "speak" with it understandable language. Coinjapan will pave the way to the Japanese investment market for your company, with further providing of successful ICO for the rapid development of the project.</p>
+                    <div class="row">
+                        <div class="col-sm-12 col-md-6 offset-md-6">
+                            <a href="#" class="cj-btn"><span>more</span></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -118,35 +118,42 @@
 <section class="home-projects">
     <div class="cj-container">
         <h2 class="section-header">projects</h2>
-        <div class="row" data-projectsAutocount="container">
-            <div class="col-sm-12 col-md-4 project-item">
-                <h3>Gravida cum sociis</h3>
-                <p data-projectsAutocount="field" data-from="0" data-to="123">0</p>
-            </div>
-            <div class="col-sm-12 col-md-4 project-item">
-                <h3>Vitae semper quis</h3>
-                <p data-projectsAutocount="field" data-from="0" data-to="123">0</p>
-            </div>
-            <div class="col-sm-12 col-md-4 project-item">
-                <h3>Facilisis mauris</h3>
-                <p data-projectsAutocount="field" data-from="0" data-to="123">0</p>
+        <div class="project-items">
+            <div class="row" data-projectsAutocount="container">
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item">
+                        <h3>Successful ICOs</h3>
+                        <p data-projectsAutocount="field" data-from="0" data-to="123">0</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item project-item-middle">
+                        <h3>Collected funds</h3>
+                        <p data-projectsAutocount="field" data-from="0" data-to="123">0</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item">
+                        <h3>Attracted investors</h3>
+                        <p data-projectsAutocount="field" data-from="0" data-to="123">0</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-sm-12 col-md-4 offset-md-8">
                 <a href="#" class="cj-btn"><span>more</span></a>
             </div>
         </div>
     </div>
 </section>
-
 
 <section class="home-news">
     <div class="cj-container">
         <h2 class="section-header">news</h2>
         <div class="news-items">
-            <div class="row news-item">
-                <div class="col-sm-12 col-md-5 news-item-header">
+            <div class="news-item">
+                <div class="news-item-header">
                     <div class="news-category-label">
                         <span style="background-color: #944d92;">Our News</span>
                     </div>
@@ -154,7 +161,7 @@
                         21st June, 2018
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-7">
+                <div class="news-item-body">
                     <h4 class="news-title">Id diam maecenas ultricies mi eget mauris.</h4>
                     <p class="news-description">
                         Enim neque volutpat ac tincidunt vitae. Eget nunc lobortis mattis aliquam faucibus. Amet aliquam
@@ -162,16 +169,16 @@
                     </p>
                 </div>
             </div>
-            <div class="row news-item">
-                <div class="col-sm-12 col-md-5 news-item-header">
+            <div class="news-item">
+                <div class="news-item-header">
                     <div class="news-category-label">
                         <span style="background-color: #97c15e;">Clients ISO</span>
                     </div>
                     <div class="news-date">
-                        25th Mar., 2018
+                        21st June, 2018
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-7">
+                <div class="news-item-body">
                     <h4 class="news-title">Id diam maecenas ultricies mi eget mauris.</h4>
                     <p class="news-description">
                         Enim neque volutpat ac tincidunt vitae. Eget nunc lobortis mattis aliquam faucibus. Amet aliquam
@@ -179,16 +186,16 @@
                     </p>
                 </div>
             </div>
-            <div class="row news-item">
-                <div class="col-sm-12 col-md-5 news-item-header">
+            <div class="news-item">
+                <div class="news-item-header">
                     <div class="news-category-label">
                         <span style="background-color: #f95959;">Japan</span>
                     </div>
                     <div class="news-date">
-                        25th Mar., 2018
+                        21st June, 2018
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-7">
+                <div class="news-item-body">
                     <h4 class="news-title">Id diam maecenas ultricies mi eget mauris.</h4>
                     <p class="news-description">
                         Enim neque volutpat ac tincidunt vitae. Eget nunc lobortis mattis aliquam faucibus. Amet aliquam
@@ -196,8 +203,8 @@
                     </p>
                 </div>
             </div>
-            <div class="row news-item">
-                <div class="col-sm-12 col-md-5 news-item-header">
+            <div class="news-item">
+                <div class="news-item-header">
                     <div class="news-category-label">
                         <span style="background-color: #944d92;">Our News</span>
                     </div>
@@ -205,7 +212,7 @@
                         21st June, 2018
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-7">
+                <div class="news-item-body">
                     <h4 class="news-title">Id diam maecenas ultricies mi eget mauris.</h4>
                     <p class="news-description">
                         Enim neque volutpat ac tincidunt vitae. Eget nunc lobortis mattis aliquam faucibus. Amet aliquam
@@ -213,16 +220,16 @@
                     </p>
                 </div>
             </div>
-            <div class="row news-item">
-                <div class="col-sm-12 col-md-5 news-item-header">
+            <div class="news-item">
+                <div class="news-item-header">
                     <div class="news-category-label">
                         <span style="background-color: #688cc2;">World</span>
                     </div>
                     <div class="news-date">
-                        1st Nov., 2017
+                        21st June, 2018
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-7">
+                <div class="news-item-body">
                     <h4 class="news-title">Id diam maecenas ultricies mi eget mauris.</h4>
                     <p class="news-description">
                         Enim neque volutpat ac tincidunt vitae. Eget nunc lobortis mattis aliquam faucibus. Amet aliquam
@@ -232,12 +239,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-sm-12 col-md-4 offset-md-8">
                 <a href="#" class="cj-btn"><span>more</span></a>
             </div>
         </div>
     </div>
 </section>
+
 <section class="home-partners">
     <div class="cj-container">
         <h2 class="section-header">partners</h2>
@@ -291,7 +299,7 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="row">
-            <div class="col-8 offset-2">
+            <div class="col-md-12 col-sm-12">
                 <div class="social-links">
                     <a href="#"><img src="img/fb-icon.png" alt=""></a>
                     <a href="#"><img src="img/twitter.png" alt=""></a>
