--- a/index.html
+++ b/index.html
@@ -299,12 +299,17 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="row">
+            <div class="col-12">
+                <a href="#" class="footer-connect-us">Connect with us</a>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-12 col-sm-12">
                 <div class="social-links">
-                    <a href="#"><img src="img/fb-icon.png" alt=""></a>
-                    <a href="#"><img src="img/twitter.png" alt=""></a>
-                    <a href="#"><img src="img/telegram.png" alt=""></a>
-                    <a href="#"><img src="img/ytube.png" alt=""></a>
+                    <a href="#" class="fb-icon"></a>
+                    <a href="#" class="twitter-icon"></a>
+                    <a href="#" class="telegram-icon"></a>
+                    <a href="#" class="youtube-icon"></a>
                 </div>
             </div>
         </div>
