--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="js/owlCarousel.js"></script>
     <script type="text/javascript" src="js/homeTitleFix.js"></script>
     <script type="text/javascript" src="js/menuHandler.js"></script>
+    <script type="text/javascript" src="js/goToTop.js"></script>
 </head>
 <body>
 
@@ -61,6 +62,9 @@
         </div>
     </div>
 </header>
+<div class="go-to-top" data-go-to-top="btn">
+    <img src="img/arrowGoToTop.png" alt="go to top">
+</div>
 <br><br><br>
 
 <section class="home-title">
@@ -310,6 +314,9 @@
             <div class="col-12">
                 <div class="copyright">© 2018 CoinJapan</div>
             </div>
+        </div>
+        <div class="footer-go-to-top" data-go-to-top="btn">
+            <img src="img/arrowGoToTop.png" alt="go to top">
         </div>
     </div>
 </footer>
