В меню About us меняем на About ICO Consulting and Blockchain Technologies, чуть меньше шрифт и расстояние между строками для десктопа На 10 рх сделать ближе стрелки к лого в Partners Работа над цифрами (см. телеграм) Лого партнеров на 10% меньше Нижнюю грань анимации поднять на 20 рх Coinjapan is a reliable partner to attract Japanese investments via ICO. “ICO” заменить на “crowdfunding”

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <nav class="header-navigation">
                     <ul>
                         <li><a class="active-nav-item" href="#">Home</a></li>
-                        <li><a href="#">About us</a></li>
+                        <li><a href="#">About</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Projects</a></li>
                         <li><a href="#">Partners</a></li>
@@ -92,7 +92,7 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="about-us-content">
                         <h2 class="section-header" data-css-animate="trigger">We are CoinJapan</h2>
-                        <p data-css-animate="trigger">Coinjapan is a reliable partner to attract Japanese investments via ICO. The world's largest
+                        <p data-css-animate="trigger">Coinjapan is a reliable partner to attract Japanese investments via crowdfunding. The world's largest
                             cryptocurrency market with proactive investors, who willingly invest in innovative projects and
                             the future tech, is open only to those who "speak" with it understandable language. Coinjapan
                             will pave the way to the Japanese investment market for your company, with further providing of
@@ -151,19 +151,19 @@
                  <div class="col-sm-12 col-md-4">
                     <div class="project-item ">
                         <h3>Collected funds</h3>
-                        <p class="partners-number-medium">$ <span data-projectsAutocount="field" data-from="267" data-to="400">0</span><span class="partner-number-description">Million</span></p>
+                        <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267" data-to="400">400</span><span class="partner-number-description">Million</span></p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item project-item-middle">
                         <h3>Successful ICOs</h3>
-                        <p><span class="success-ico-color" data-projectsAutocount="field" data-from="7" data-to="15"></span></p>
+                        <p><span class="success-ico-color partners-number-medium" data-projectsAutocount="field" data-from="7" data-to="15">15</span></p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item">
                         <h3>Attracted investors</h3>
-                        <p class="partners-number-medium" data-projectsAutocount="field" data-from="2500" data-to="3000">0</p>
+                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="2500" data-to="3000">3000</span><span>+</span></p>
                     </div>
                 </div>
             </div>
