--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </section>
     <section class="home-projects">
         <div class="cj-container">
-            <h2 class="section-header" data-css-animate="trigger">Projects</h2>
+            <h2 class="section-header" data-css-animate="trigger">Achievements</h2>
             <div class="project-items" data-css-animate="trigger">
                 <div class="row" data-projectsAutocount="container">
                  <div class="col-sm-12 col-md-4">
