--- a/index.html
+++ b/index.html
@@ -88,94 +88,84 @@
 
     <section class="home-about-us" data-go-to-top="down-destination">
         <div class="cj-container">
-            <div class="row">
-                <div class="col-sm-12 col-md-6">
-                    <div class="about-us-content">
-                        <h2 class="section-header" data-css-animate="trigger">We are CoinJapan</h2>
-                        <p data-css-animate="trigger">Coinjapan is a reliable partner to attract Japanese investments via crowdfunding. The world's largest
-                            cryptocurrency market with proactive investors, who willingly invest in innovative projects and
-                            the future tech, is open only to those who "speak" with it understandable language. Coinjapan
-                            will pave the way to the Japanese investment market for your company, with further providing of
-                        successful ICO for the rapid development of the project.</p>
-                        <div class="row">
-                            <div class="col-sm-12 col-md-6 offset-md-6">
-                                <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
-                            </div>
+            <div class="about-us-content">
+                <h2 class="section-header" data-css-animate="trigger">We are CoinJapan</h2>
+                <p data-css-animate="trigger">Coinjapan is a reliable partner to attract Japanese investments via crowdfunding. The world's largest
+                    cryptocurrency market with proactive investors, who willingly invest in innovative projects and
+                    the future tech, is open only to those who "speak" with it understandable language. Coinjapan
+                    will pave the way to the Japanese investment market for your company, with further providing of
+                successful ICO for the rapid development of the project.</p>
+                <div class="cj-btn-container">
+                    <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
+                </div>
+            </div>
+            <div class="about-us-slider">
+                <div id="mainSlider" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-20_21-27-36.jpg"
+                            alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-37.jpg"
+                            alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-43.jpg"
+                            alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-47.jpg"
+                            alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-52.jpg"
+                            alt="Third slide">
+                        </div>
+                    </div>
+                    <div class="slide-controls-box">
+                        <a class="about-us-slider-prev" href="#mainSlider" role="button" data-slide="prev">
+                            <img src="img/prev-arrow.png" alt="prev">
+                        </a>
+                        <a class="about-us-slider-next" href="#mainSlider" role="button" data-slide="next">
+                            <img src="img/next-arrow.png" alt="next">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="home-projects">
+            <div class="cj-container">
+                <h2 class="section-header" data-css-animate="trigger">Achievements</h2>
+                <div class="project-items" data-css-animate="trigger">
+                    <div class="row" data-projectsAutocount="container">
+                     <div class="col-sm-12 col-md-4">
+                        <div class="project-item ">
+                            <h3>Collected funds</h3>
+                            <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267" data-to="400">400</span><span class="partner-number-description">Million</span></p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4">
+                        <div class="project-item project-item-middle">
+                            <h3>Successful ICOs</h3>
+                            <p><span class="success-ico-color partners-number-medium" data-projectsAutocount="field" data-from="7" data-to="15">15</span></p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4">
+                        <div class="project-item">
+                            <h3>Attracted investors</h3>
+                            <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="2500" data-to="3000">3000</span><span>+</span></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6">
-                    <div class="about-us-slider">
-                        <div id="mainSlider" class="carousel slide" data-ride="carousel">
-                            <div class="carousel-inner" role="listbox">
-                                <div class="carousel-item active">
-                                    <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-20_21-27-36.jpg"
-                                    alt="First slide">
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-37.jpg"
-                                    alt="Second slide">
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-43.jpg"
-                                    alt="Third slide">
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-47.jpg"
-                                    alt="Third slide">
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-52.jpg"
-                                    alt="Third slide">
-                                </div>
-                            </div>
-                            <div class="slide-controls-box">
-                                <a class="about-us-slider-prev" href="#mainSlider" role="button" data-slide="prev">
-                                    <img src="img/prev-arrow.png" alt="prev">
-                                </a>
-                                <a class="about-us-slider-next" href="#mainSlider" role="button" data-slide="next">
-                                    <img src="img/next-arrow.png" alt="next">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="home-projects">
-        <div class="cj-container">
-            <h2 class="section-header" data-css-animate="trigger">Achievements</h2>
-            <div class="project-items" data-css-animate="trigger">
-                <div class="row" data-projectsAutocount="container">
-                 <div class="col-sm-12 col-md-4">
-                    <div class="project-item ">
-                        <h3>Collected funds</h3>
-                        <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267" data-to="400">400</span><span class="partner-number-description">Million</span></p>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-4">
-                    <div class="project-item project-item-middle">
-                        <h3>Successful ICOs</h3>
-                        <p><span class="success-ico-color partners-number-medium" data-projectsAutocount="field" data-from="7" data-to="15">15</span></p>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-4">
-                    <div class="project-item">
-                        <h3>Attracted investors</h3>
-                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="2500" data-to="3000">3000</span><span>+</span></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-4 offset-md-8">
-                <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="home-news">
+                <div class="cj-btn-container">
+                 <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
+             </div>
+         </div>
+         
+     </div>
+ </section>
+ <section class="home-news">
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">News</h2>
         <div class="news-items">
@@ -245,16 +235,13 @@
                     <h4 class="news-title">Id diam maecenas ultricies mi eget mauris.</h4>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-4 offset-md-8">
-                <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
-            </div>
-        </div>
-    </div>
-</section>
+            <div class="cj-btn-container">
+             <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
+         </div>
+     </div>
+ </section>
 
-<section class="home-partners">
+ <section class="home-partners">
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">Partners</h2>
 
