Выровнять титул по лого Серая страница должна быть по размеру экрана девайса, но это не так, она почему-то чуть длиннее чем нужно (на десктопе тоже, см. телеграм) Кнопки Read more по центру экрана (на десктопе тоже) Бокс картинок We are CoinJapan сделать меньше (чтобы вся секция влезла на один экран таблета, см. телеграм), пропорции бокса могут менятся (а картинки обрезается) в зависимости от размера экрана Пространство в конце партнеров сделать меньше Меню: Копируем полностью, размещение названия страницы, размещение языков (актуальный белый, невыбранный серый), страница на которой мы сейчас - меняем цвет шрифта в фирменный красный

--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
                     <div class="lang-icon"></div>
                 </div>
                 <ul class="header-languages">
-                    <li><a href="#"><span>ru</span></a></li>
+                    <li><a href="#" ><span>ru</span></a></li>
+                    <li><a href="#" class="active-lang"><span>en</span></a></li>
                 </ul>
             </div>
         </div>
     </header>
-
-    <br><br><br>
 
     <section class="home-title">
         <div class="home-title-bg">
@@ -139,7 +138,7 @@
                 <h2 class="section-header" data-css-animate="trigger">Achievements</h2>
                 <div class="project-items" data-css-animate="trigger">
                     <div class="row" data-projectsAutocount="container">
-                     <div class="col-sm-12 col-md-4">
+                       <div class="col-sm-12 col-md-4">
                         <div class="project-item ">
                             <h3>Collected funds</h3>
                             <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267" data-to="400">400</span><span class="partner-number-description">Million</span></p>
@@ -159,13 +158,13 @@
                     </div>
                 </div>
                 <div class="cj-btn-container">
-                 <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
-             </div>
-         </div>
-         
-     </div>
- </section>
- <section class="home-news">
+               <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
+           </div>
+            </div>
+            
+       </div>
+   </section>
+   <section class="home-news">
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">News</h2>
         <div class="news-items">
@@ -235,13 +234,13 @@
                     <h4 class="news-title">Id diam maecenas ultricies mi eget mauris.</h4>
                 </div>
             </div>
-            <div class="cj-btn-container">
-             <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
-         </div>
-     </div>
- </section>
+                 <div class="cj-btn-container">
+           <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
+       </div>
+        </div>
+   </section>
 
- <section class="home-partners">
+   <section class="home-partners">
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">Partners</h2>
 
