--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4">
-                        <div class="project-item">
+                        <div class="project-item project-item-last">
                             <h3>Attracted investors</h3>
                             <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="2500" data-to="3000">3000</span><span>+</span></p>
                         </div>
