--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <p class="header-controls-title">CoinJapan</p>
             <nav class="header-navigation">
                 <ul>
-                    <li><a class="active-nav-item" href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a class="active-nav-item" href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Partners</a></li>
