Creating About page
Created
1)title section
2)description section
3)sub title section

added Fonts and images
+ added scripts for breadcrumb animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/lib/owl.carousel.min.css">
     <link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/lib/animate.min.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -37,7 +38,7 @@
 <header class="header">
     <div class="header-container">
         <div class="logo">
-            <img src="img/logotype.png" alt="Logoipe">
+            <a href="index.html"><img src="img/logotype.png" alt="Logoipe"></a>
         </div>
         <button class="menu-control external">
             <span></span>
